--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <body background="Company Photos/background.jpg">
         <header>
         <div class="center">
-            <br><img src="Company%20Photos/colored-logo-nlf-large.png" title="" alt="" width="600" height="400">
+            <br><img src="colored-logo-nlf-large.png" title="" alt="" width="600" height="400">
             <!--<H1><b>Mastroid Tech</b></H1> 
         </div>
             <div class="right">
