--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="Company Photos/favicon.ico" />
 
         <!--<script type="text/javascript">
-            var picPaths = ["Company Photos/Laptop.jpg","Company Photos/Desktop.jpg","Company Photos/Monitor.jpg","Company Photos/Desktop 3.jpg","Company Photos/SmartPhone.jpg","Company Photos/Printer.jpg", "Company Photos/Tablet.jpg"];
+            var picPaths = ["Laptop.jpg","Desktop.jpg","Monitor.jpg","Desktop 3.jpg","SmartPhone.jpg","Printer.jpg", "Company Photos/Tablet.jpg"];
             var curPic = -1;
             //preload the images for smooth animation
             var imgO = new Array();
@@ -39,7 +39,7 @@
         </script> -->
 
     </head>
-    <body background="Company Photos/background.jpg">
+    <body background="background.jpg">
         <header>
         <div class="center">
             <br><img src="colored-logo-nlf-large.png" title="" alt="" width="600" height="400">
