--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="Company Photos/favicon.ico" />
 
         <!--<script type="text/javascript">
-            var picPaths = ["Laptop.jpg","Desktop.jpg","Monitor.jpg","Desktop 3.jpg","SmartPhone.jpg","Printer.jpg", "Company Photos/Tablet.jpg"];
+            var picPaths = ["Laptop.jpg","Desktop.jpg","Monitor.jpg","Desktop 3.jpg","SmartPhone.jpg","Printer.jpg", "Tablet.jpg"];
             var curPic = -1;
             //preload the images for smooth animation
             var imgO = new Array();
