--- a/aboutus.html
+++ b/aboutus.html
@@ -13,10 +13,10 @@
     <meta name="keywords" content="" />
     <title>About Us Page</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="shortcut icon" href="Company Photos/favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
-<body background="Company Photos/background.jpg">
+<body background="background.jpg">
     <header>
         <!--<div class="top">
             <H1><b>Mastroid Tech</b></H1>
@@ -46,7 +46,7 @@
    
     <div class="Logo">
   
-      <br><img src="Company%20Photos/colored-logo-nlf-large.png" title="" alt="" width="600" height="400">
+      <br><img src="colored-logo-nlf-large.png" title="" alt="" width="600" height="400">
 	  </div>
   
     <div class="center">
