--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
              </div>-->
         <nav>
             <ul class="topnav">
-                <li><a href="home.html">Home</a>
+                <li><a href="index.html">Home</a>
                 </li>
                 <li><a href="repairs.html">Repairs</a>
                 </li>
