--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta charset="utf-8">
     <meta name="keywords" content="" />
     <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="shortcut icon" href="Company Photos/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
 
         <!--<script type="text/javascript">
             var picPaths = ["Laptop.jpg","Desktop.jpg","Monitor.jpg","Desktop 3.jpg","SmartPhone.jpg","Printer.jpg", "Tablet.jpg"];
