--- a/prices.html
+++ b/prices.html
@@ -12,14 +12,14 @@
     <meta charset="utf-8">
     <meta name="keywords" content="" />
     <title>Price List</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="shortcut icon" href="Company Photos/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
 	</head>
 
-<body background="Company Photos/background.jpg">
+<body background="background.jpg">
     <header>
         <div class="center">
-            <br><img src="Company%20Photos/colored-logo-nlf-large.png" title="" alt="" width="600" height="400">
+            <br><img src="colored-logo-nlf-large.png" title="" alt="" width="600" height="400">
             <!--<H1><b>Mastroid Tech</b></H1>
         </div>
         
