--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="" />
     <title>About Us Page</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
