--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="" />
     <title>Gallery Page</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <link rel="shortcut icon" href="favicon.ico" />
     
 </head>
