--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            
              </div>   
         <nav>
-                <ul class="topnav">
+                <ul class="rightnav">
                 <li><a href="index.html" class="active">Home</a>
                 </li>
                 <li><a href="repairs.html">Repairs</a>
