--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <body background="background.jpg">
         <header>
         <div class="center">
-            <br><img src="colored-logo-nlf-large.png" title="" alt="" width="800" height="400">
+            <br><img src="colored-logo-nlf-large.png" title="" alt="" width="800" height="600">
            
              </div>   
         <nav>
-                <ul class="rightnav">
+                <ul class="topnav">
                 <li><a href="index.html" class="active">Home</a>
                 </li>
                 <li><a href="repairs.html">Repairs</a>
