--- a/repairs.html
+++ b/repairs.html
@@ -46,8 +46,8 @@
                 </li>
                 <li><a href="prices.html">Prices</a>
                 </li>
-                <li><a href="gallery.html">Gallery</a>
-                </li>
+               <!-- <li><a href="gallery.html">Gallery</a>
+                </li>-->
                 <li><a href="aboutus.html">About Us</a>
                 </li>
                 
