--- a/repairs.html
+++ b/repairs.html
@@ -26,7 +26,7 @@
     </header>
 <body background="background.jpg">
         
-    <div class="repairs"><br><br><br>
+    <div class="repairs"><br>
                 <b><p>The different typyes of repairs consist of:</p></b>
                 <b><p>Software Repairs</p></b>
                 <b><p>Hardware Repairs</p></b>
